--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.3",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -19,7 +20,11 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@juggle/resize-observer": "^3.3.1",
+    "@swimlane/ngx-charts": "^19.0.1",
+    "apexcharts": "^3.28.1",
     "echarts": "^5.1.2",
+    "ng-apexcharts": "^1.5.12",
+    "ng-zorro-antd": "^12.0.1",
     "ngx-echarts": "^7.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
