--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@juggle/resize-observer": "^3.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@swimlane/ngx-charts": "^19.0.1",
     "apexcharts": "^3.28.1",
+    "bootstrap": "^4.5.0",
     "echarts": "^5.1.2",
     "ng-apexcharts": "^1.5.12",
     "ng-zorro-antd": "^12.0.1",
